clusters/production/media/mealie/mealie-release.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
      - name: mealie
        image: ghcr.io/mealie-recipes/mealie:v3.2.0 # {"$imagepolicy": "flux-system:mealie"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: mealie-config
          mountPath: /app/data/
      volumes:
      - name: mealie-config
        persistentVolumeClaim:
          claimName: pvc-mealie-config
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: default
  labels:
    app: mealie
spec:
  selector:
    app: mealie
  ports:
  - name: mealie
    port: 9000
    targetPort: 9000
  type: ClusterIP
