clusters/production/media/mealie/mealie-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "mealie.rees.ca"
    secretName: mealie-tls
  rules:
  - host: "mealie.rees.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mealie
            port:
              number: 9000
